# kek_comp

./: .gitignore  README.md  pyproject.toml
examples/: arrays.kek  generated.kek  kek_features.kek
kek_comp/: ast_nodes.py  builtins.py  cli.py  errors.py  generator.py  interpreter.py  lexer.py  parser.py  pipeline.py  semantic.py  token.py
tests/: test_kek_comp.py
