[project]
name = "kek-comp"
version = "0.1.0"
description = "Educational compiler and interpreter for the kek language"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
kek-comp = "kek_comp.cli:main"
kek-compiler = "kek_comp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
